code/parser/y.output
   0  $accept : program $end

   1  program : program_name program_body
   2          | program_name statement_list

   3  $$1 :

   4  program : $$1 program_body

   5  $$2 :

   6  program : error $$2 program_name program_body
   7          | error EOF
   8          | EOF

   9  program_name : ID

  10  program_body : '{' statement_list '}'
  11               | '{' statement_list close_brace_list

  12  $$3 :

  13  program_body : open_brace_list $$3 statement_list '}'
  14               | '{' '}'
  15               |
  16               | '{' error '}'

  17  open_brace_list : '{' '{'
  18                  | open_brace_list '{'

  19  close_brace_list : '}' '}'
  20                   | close_brace_list '}'

  21  statement_list : statement
  22                 | statement_list statement
  23                 | error ';'

  24  statement : executable_statement
  25            | declarative_statement

  26  declarative_statement : declaration_of_variables
  27                        | declaracion_funcion punto_y_coma_opcional

  28  punto_y_coma_opcional :
  29                        | ';'

  30  cuerpo_ejecutable : executable_statement
  31                    | bloque_ejecutable

  32  bloque_ejecutable : '{' conjunto_sentencias_ejecutables '}'
  33                    | '{' '}'

  34  conjunto_sentencias_ejecutables : executable_statement
  35                                  | conjunto_sentencias_ejecutables executable_statement

  36  executable_statement : asignacion_simple
  37                       | inline_function_invocation
  38                       | multiple_assignment
  39                       | sentencia_control
  40                       | sentencia_retorno
  41                       | impresion
  42                       | lambda

  43  sentencia_control : if
  44                    | do_while

  45  declaration_of_variables : UINT list_of_identifiers ';'
  46                           | UINT list_of_identifiers error
  47                           | UINT identifier DASIG constant ';'
  48                           | UINT error

  49  list_of_identifiers : identifier
  50                      | list_of_identifiers ',' identifier
  51                      | list_of_identifiers ID

  52  identifier : ID

  53  asignacion_simple : left_hand_side DASIG expression ';'
  54                    | left_hand_side DASIG expression error
  55                    | left_hand_side expression ';'
  56                    | left_hand_side DASIG error

  57  left_hand_side : variable

  58  multiple_assignment : list_of_variables list_of_constants ';'
  59                      | list_of_variables list_of_constants error

  60  list_of_variables : variable '='
  61                    | variable ',' list_of_variables
  62                    | variable error list_of_variables

  63  list_of_constants : constant
  64                    | list_of_constants ',' constant
  65                    | list_of_constants constant

  66  expression : term
  67             | expression operador_suma term
  68             | expression operador_suma error
  69             | expression term_simple
  70             | '+' term

  71  operador_suma : '+'
  72                | '-'

  73  term : term operador_multiplicacion factor
  74       | factor
  75       | term operador_multiplicacion error
  76       | operador_multiplicacion factor

  77  term_simple : term_simple operador_multiplicacion factor
  78              | factor_simple
  79              | term_simple operador_multiplicacion error

  80  operador_multiplicacion : '/'
  81                          | '*'

  82  factor : variable
  83         | constant
  84         | invocacion_funcion

  85  factor_simple : variable
  86                | CTE
  87                | invocacion_funcion

  88  constant : CTE
  89           | '-' CTE

  90  variable : ID
  91           | ID '.' ID

  92  condicion : '(' cuerpo_condicion ')'
  93            | '(' ')'
  94            | cuerpo_condicion ')'
  95            | '(' cuerpo_condicion error

  96  cuerpo_condicion : expression comparador expression
  97                   | expression term_simple
  98                   | expression operador_suma term
  99                   | term

 100  comparador : '>'
 101             | '<'
 102             | EQ
 103             | LEQ
 104             | GEQ
 105             | NEQ
 106             | '='

 107  if : if_start cuerpo_if
 108     | IF error

 109  $$4 :

 110  if_start : IF $$4 condicion

 111  cuerpo_if : cuerpo_ejecutable rama_else ENDIF ';'
 112            | cuerpo_ejecutable rama_else ENDIF error
 113            | cuerpo_ejecutable rama_else error
 114            | cuerpo_ejecutable rama_else ';'
 115            | rama_else ENDIF ';'

 116  rama_else :
 117            | else_start cuerpo_ejecutable
 118            | else_start

 119  else_start : ELSE

 120  do_while : do_while_start cuerpo_iteracion ';'
 121           | do_while_start cuerpo_iteracion error
 122           | do_while_start error

 123  do_while_start : DO

 124  cuerpo_iteracion : cuerpo_ejecutable fin_cuerpo_iteracion
 125                   | fin_cuerpo_iteracion
 126                   | cuerpo_ejecutable condicion

 127  fin_cuerpo_iteracion : WHILE condicion

 128  declaracion_funcion : inicio_funcion conjunto_parametros '{' function_body '}'
 129                      | inicio_funcion conjunto_parametros '{' '}'

 130  inicio_funcion : UINT ID
 131                 | UINT

 132  function_body : statement
 133                | function_body statement

 134  conjunto_parametros : '(' lista_parametros ')'
 135                      | '(' ')'

 136  lista_parametros : parametro_formal
 137                   | lista_parametros ',' parametro_formal
 138                   | parametro_vacio

 139  parametro_vacio : lista_parametros ','
 140                  | ',' parametro_formal

 141  parametro_formal : semantica_pasaje UINT ID
 142                   | semantica_pasaje UINT
 143                   | semantica_pasaje ID

 144  semantica_pasaje :
 145                   | CVR
 146                   | error

 147  sentencia_retorno : RETURN '(' expression ')' ';'
 148                    | RETURN '(' expression ')' error
 149                    | RETURN '(' ')' ';'
 150                    | RETURN expression ';'
 151                    | RETURN error

 152  inline_function_invocation : invocacion_funcion ';'
 153                             | invocacion_funcion error

 154  invocacion_funcion : function_start '(' lista_argumentos ')'

 155  function_start : variable

 156  lista_argumentos : argumento
 157                   | lista_argumentos ',' argumento

 158  argumento : expression FLECHA ID
 159            | expression

 160  impresion : PRINT imprimible ';'
 161            | PRINT imprimible error

 162  imprimible : '(' elemento_imprimible ')'
 163             | '(' ')'
 164             | elemento_imprimible
 165             |

 166  elemento_imprimible : STR
 167                      | expression

 168  lambda : parametro_lambda bloque_ejecutable argumento_lambda ';'
 169         | parametro_lambda bloque_ejecutable argumento_lambda error
 170         | parametro_lambda '{' conjunto_sentencias_ejecutables argumento_lambda error
 171         | parametro_lambda conjunto_sentencias_ejecutables argumento_lambda error
 172         | parametro_lambda conjunto_sentencias_ejecutables '}' argumento_lambda error

 173  argumento_lambda : '(' factor ')'
 174                   | '(' ')'
 175                   |

 176  parametro_lambda : '(' UINT identifier ')'

state 0
	$accept : . program $end  (0)
	$$1 : .  (3)

	error  shift 1
	EOF  shift 2
	ID  shift 3
	$end  reduce 3
	'{'  reduce 3

	program  goto 4
	program_name  goto 5
	$$1  goto 6


state 1
	program : error . $$2 program_name program_body  (6)
	program : error . EOF  (7)
	$$2 : .  (5)

	EOF  shift 7
	ID  reduce 5

	$$2  goto 8


state 2
	program : EOF .  (8)

	.  reduce 8


state 3
	program_name : ID .  (9)

	.  reduce 9


state 4
	$accept : program . $end  (0)

	$end  accept


state 5
	program : program_name . program_body  (1)
	program : program_name . statement_list  (2)
	program_body : .  (15)

	error  shift 9
	ID  shift 10
	PRINT  shift 11
	IF  shift 12
	UINT  shift 13
	DO  shift 14
	RETURN  shift 15
	'{'  shift 16
	'('  shift 17
	$end  reduce 15

	function_start  goto 18
	variable  goto 19
	inicio_funcion  goto 20
	invocacion_funcion  goto 21
	parametro_lambda  goto 22
	list_of_variables  goto 23
	multiple_assignment  goto 24
	left_hand_side  goto 25
	program_body  goto 26
	statement_list  goto 27
	open_brace_list  goto 28
	statement  goto 29
	executable_statement  goto 30
	declarative_statement  goto 31
	declaration_of_variables  goto 32
	declaracion_funcion  goto 33
	asignacion_simple  goto 34
	inline_function_invocation  goto 35
	sentencia_control  goto 36
	sentencia_retorno  goto 37
	impresion  goto 38
	lambda  goto 39
	if  goto 40
	do_while  goto 41
	if_start  goto 42
	do_while_start  goto 43


state 6
	program : $$1 . program_body  (4)
	program_body : .  (15)

	'{'  shift 16
	$end  reduce 15

	program_body  goto 44
	open_brace_list  goto 28


state 7
	program : error EOF .  (7)

	.  reduce 7


state 8
	program : error $$2 . program_name program_body  (6)

	ID  shift 3
	.  error

	program_name  goto 45


state 9
	statement_list : error . ';'  (23)

	';'  shift 46
	.  error


state 10
	variable : ID .  (90)
	variable : ID . '.' ID  (91)

	'.'  shift 47
	error  reduce 90
	ID  reduce 90
	CTE  reduce 90
	EQ  reduce 90
	GEQ  reduce 90
	LEQ  reduce 90
	NEQ  reduce 90
	DASIG  reduce 90
	FLECHA  reduce 90
	';'  reduce 90
	','  reduce 90
	'='  reduce 90
	'+'  reduce 90
	'-'  reduce 90
	'/'  reduce 90
	'*'  reduce 90
	'('  reduce 90
	')'  reduce 90
	'>'  reduce 90
	'<'  reduce 90


state 11
	impresion : PRINT . imprimible ';'  (160)
	impresion : PRINT . imprimible error  (161)
	imprimible : .  (165)

	ID  shift 10
	CTE  shift 48
	STR  shift 49
	'+'  shift 50
	'-'  shift 51
	'/'  shift 52
	'*'  shift 53
	'('  shift 54
	error  reduce 165
	';'  reduce 165

	function_start  goto 18
	variable  goto 55
	constant  goto 56
	invocacion_funcion  goto 57
	operador_multiplicacion  goto 58
	expression  goto 59
	term  goto 60
	factor  goto 61
	imprimible  goto 62
	elemento_imprimible  goto 63


state 12
	if : IF . error  (108)
	if_start : IF . $$4 condicion  (110)
	$$4 : .  (109)

	error  shift 64
	ID  reduce 109
	CTE  reduce 109
	'+'  reduce 109
	'-'  reduce 109
	'/'  reduce 109
	'*'  reduce 109
	'('  reduce 109

	$$4  goto 65


state 13
	declaration_of_variables : UINT . list_of_identifiers ';'  (45)
	declaration_of_variables : UINT . list_of_identifiers error  (46)
	declaration_of_variables : UINT . identifier DASIG constant ';'  (47)
	declaration_of_variables : UINT . error  (48)
	inicio_funcion : UINT . ID  (130)
	inicio_funcion : UINT .  (131)

	error  shift 66
	ID  shift 67
	'('  reduce 131

	identifier  goto 68
	list_of_identifiers  goto 69


state 14
	do_while_start : DO .  (123)

	.  reduce 123


state 15
	sentencia_retorno : RETURN . '(' expression ')' ';'  (147)
	sentencia_retorno : RETURN . '(' expression ')' error  (148)
	sentencia_retorno : RETURN . '(' ')' ';'  (149)
	sentencia_retorno : RETURN . expression ';'  (150)
	sentencia_retorno : RETURN . error  (151)

	error  shift 70
	ID  shift 10
	CTE  shift 48
	'+'  shift 50
	'-'  shift 51
	'/'  shift 52
	'*'  shift 53
	'('  shift 71
	.  error

	function_start  goto 18
	variable  goto 55
	constant  goto 56
	invocacion_funcion  goto 57
	operador_multiplicacion  goto 58
	expression  goto 72
	term  goto 60
	factor  goto 61


state 16
	program_body : '{' . statement_list '}'  (10)
	program_body : '{' . statement_list close_brace_list  (11)
	program_body : '{' . '}'  (14)
	program_body : '{' . error '}'  (16)
	open_brace_list : '{' . '{'  (17)

	error  shift 73
	ID  shift 10
	PRINT  shift 11
	IF  shift 12
	UINT  shift 13
	DO  shift 14
	RETURN  shift 15
	'{'  shift 74
	'}'  shift 75
	'('  shift 17
	.  error

	function_start  goto 18
	variable  goto 19
	inicio_funcion  goto 20
	invocacion_funcion  goto 21
	parametro_lambda  goto 22
	list_of_variables  goto 23
	multiple_assignment  goto 24
	left_hand_side  goto 25
	statement_list  goto 76
	statement  goto 29
	executable_statement  goto 30
	declarative_statement  goto 31
	declaration_of_variables  goto 32
	declaracion_funcion  goto 33
	asignacion_simple  goto 34
	inline_function_invocation  goto 35
	sentencia_control  goto 36
	sentencia_retorno  goto 37
	impresion  goto 38
	lambda  goto 39
	if  goto 40
	do_while  goto 41
	if_start  goto 42
	do_while_start  goto 43


state 17
	parametro_lambda : '(' . UINT identifier ')'  (176)

	UINT  shift 77
	.  error


state 18
	invocacion_funcion : function_start . '(' lista_argumentos ')'  (154)

	'('  shift 78
	.  error


state 19
	left_hand_side : variable .  (57)
	list_of_variables : variable . '='  (60)
	list_of_variables : variable . ',' list_of_variables  (61)
	list_of_variables : variable . error list_of_variables  (62)
	function_start : variable .  (155)

	error  shift 79
	','  shift 80
	'='  shift 81
	ID  reduce 57
	CTE  reduce 57
	DASIG  reduce 57
	'+'  reduce 57
	'-'  reduce 57
	'/'  reduce 57
	'*'  reduce 57
	'('  reduce 155


state 20
	declaracion_funcion : inicio_funcion . conjunto_parametros '{' function_body '}'  (128)
	declaracion_funcion : inicio_funcion . conjunto_parametros '{' '}'  (129)

	'('  shift 82
	.  error

	conjunto_parametros  goto 83


state 21
	inline_function_invocation : invocacion_funcion . ';'  (152)
	inline_function_invocation : invocacion_funcion . error  (153)

	error  shift 84
	';'  shift 85
	.  error


state 22
	lambda : parametro_lambda . bloque_ejecutable argumento_lambda ';'  (168)
	lambda : parametro_lambda . bloque_ejecutable argumento_lambda error  (169)
	lambda : parametro_lambda . '{' conjunto_sentencias_ejecutables argumento_lambda error  (170)
	lambda : parametro_lambda . conjunto_sentencias_ejecutables argumento_lambda error  (171)
	lambda : parametro_lambda . conjunto_sentencias_ejecutables '}' argumento_lambda error  (172)

	ID  shift 10
	PRINT  shift 11
	IF  shift 12
	DO  shift 14
	RETURN  shift 15
	'{'  shift 86
	'('  shift 17
	.  error

	function_start  goto 18
	variable  goto 19
	invocacion_funcion  goto 21
	parametro_lambda  goto 22
	list_of_variables  goto 23
	multiple_assignment  goto 24
	left_hand_side  goto 25
	executable_statement  goto 87
	bloque_ejecutable  goto 88
	conjunto_sentencias_ejecutables  goto 89
	asignacion_simple  goto 34
	inline_function_invocation  goto 35
	sentencia_control  goto 36
	sentencia_retorno  goto 37
	impresion  goto 38
	lambda  goto 39
	if  goto 40
	do_while  goto 41
	if_start  goto 42
	do_while_start  goto 43


state 23
	multiple_assignment : list_of_variables . list_of_constants ';'  (58)
	multiple_assignment : list_of_variables . list_of_constants error  (59)

	CTE  shift 48
	'-'  shift 51
	.  error

	constant  goto 90
	list_of_constants  goto 91


state 24
	executable_statement : multiple_assignment .  (38)

	.  reduce 38


state 25
	asignacion_simple : left_hand_side . DASIG expression ';'  (53)
	asignacion_simple : left_hand_side . DASIG expression error  (54)
	asignacion_simple : left_hand_side . expression ';'  (55)
	asignacion_simple : left_hand_side . DASIG error  (56)

	ID  shift 10
	CTE  shift 48
	DASIG  shift 92
	'+'  shift 50
	'-'  shift 51
	'/'  shift 52
	'*'  shift 53
	.  error

	function_start  goto 18
	variable  goto 55
	constant  goto 56
	invocacion_funcion  goto 57
	operador_multiplicacion  goto 58
	expression  goto 93
	term  goto 60
	factor  goto 61


state 26
	program : program_name program_body .  (1)

	.  reduce 1


state 27
	program : program_name statement_list .  (2)
	statement_list : statement_list . statement  (22)

	ID  shift 10
	PRINT  shift 11
	IF  shift 12
	UINT  shift 13
	DO  shift 14
	RETURN  shift 15
	'('  shift 17
	$end  reduce 2

	function_start  goto 18
	variable  goto 19
	inicio_funcion  goto 20
	invocacion_funcion  goto 21
	parametro_lambda  goto 22
	list_of_variables  goto 23
	multiple_assignment  goto 24
	left_hand_side  goto 25
	statement  goto 94
	executable_statement  goto 30
	declarative_statement  goto 31
	declaration_of_variables  goto 32
	declaracion_funcion  goto 33
	asignacion_simple  goto 34
	inline_function_invocation  goto 35
	sentencia_control  goto 36
	sentencia_retorno  goto 37
	impresion  goto 38
	lambda  goto 39
	if  goto 40
	do_while  goto 41
	if_start  goto 42
	do_while_start  goto 43


state 28
	program_body : open_brace_list . $$3 statement_list '}'  (13)
	open_brace_list : open_brace_list . '{'  (18)
	$$3 : .  (12)

	'{'  shift 95
	error  reduce 12
	ID  reduce 12
	PRINT  reduce 12
	IF  reduce 12
	UINT  reduce 12
	DO  reduce 12
	RETURN  reduce 12
	'('  reduce 12

	$$3  goto 96


state 29
	statement_list : statement .  (21)

	.  reduce 21


state 30
	statement : executable_statement .  (24)

	.  reduce 24


state 31
	statement : declarative_statement .  (25)

	.  reduce 25


state 32
	declarative_statement : declaration_of_variables .  (26)

	.  reduce 26


state 33
	declarative_statement : declaracion_funcion . punto_y_coma_opcional  (27)
	punto_y_coma_opcional : .  (28)

	';'  shift 97
	$end  reduce 28
	ID  reduce 28
	PRINT  reduce 28
	IF  reduce 28
	UINT  reduce 28
	DO  reduce 28
	RETURN  reduce 28
	'}'  reduce 28
	'('  reduce 28

	punto_y_coma_opcional  goto 98


state 34
	executable_statement : asignacion_simple .  (36)

	.  reduce 36


state 35
	executable_statement : inline_function_invocation .  (37)

	.  reduce 37


state 36
	executable_statement : sentencia_control .  (39)

	.  reduce 39


state 37
	executable_statement : sentencia_retorno .  (40)

	.  reduce 40


state 38
	executable_statement : impresion .  (41)

	.  reduce 41


state 39
	executable_statement : lambda .  (42)

	.  reduce 42


state 40
	sentencia_control : if .  (43)

	.  reduce 43


state 41
	sentencia_control : do_while .  (44)

	.  reduce 44


state 42
	if : if_start . cuerpo_if  (107)
	rama_else : .  (116)

	ID  shift 10
	PRINT  shift 11
	IF  shift 12
	ELSE  shift 99
	DO  shift 14
	RETURN  shift 15
	'{'  shift 100
	'('  shift 17
	ENDIF  reduce 116

	function_start  goto 18
	variable  goto 19
	invocacion_funcion  goto 21
	parametro_lambda  goto 22
	list_of_variables  goto 23
	multiple_assignment  goto 24
	left_hand_side  goto 25
	executable_statement  goto 101
	cuerpo_ejecutable  goto 102
	bloque_ejecutable  goto 103
	asignacion_simple  goto 34
	inline_function_invocation  goto 35
	sentencia_control  goto 36
	sentencia_retorno  goto 37
	impresion  goto 38
	lambda  goto 39
	if  goto 40
	do_while  goto 41
	if_start  goto 42
	cuerpo_if  goto 104
	rama_else  goto 105
	else_start  goto 106
	do_while_start  goto 43


state 43
	do_while : do_while_start . cuerpo_iteracion ';'  (120)
	do_while : do_while_start . cuerpo_iteracion error  (121)
	do_while : do_while_start . error  (122)

	error  shift 107
	ID  shift 10
	PRINT  shift 11
	IF  shift 12
	DO  shift 14
	WHILE  shift 108
	RETURN  shift 15
	'{'  shift 100
	'('  shift 17
	.  error

	function_start  goto 18
	variable  goto 19
	invocacion_funcion  goto 21
	parametro_lambda  goto 22
	list_of_variables  goto 23
	multiple_assignment  goto 24
	left_hand_side  goto 25
	executable_statement  goto 101
	cuerpo_ejecutable  goto 109
	bloque_ejecutable  goto 103
	asignacion_simple  goto 34
	inline_function_invocation  goto 35
	sentencia_control  goto 36
	sentencia_retorno  goto 37
	impresion  goto 38
	lambda  goto 39
	if  goto 40
	do_while  goto 41
	if_start  goto 42
	do_while_start  goto 43
	cuerpo_iteracion  goto 110
	fin_cuerpo_iteracion  goto 111


state 44
	program : $$1 program_body .  (4)

	.  reduce 4


state 45
	program : error $$2 program_name . program_body  (6)
	program_body : .  (15)

	'{'  shift 16
	$end  reduce 15

	program_body  goto 112
	open_brace_list  goto 28


state 46
	statement_list : error ';' .  (23)

	.  reduce 23


state 47
	variable : ID '.' . ID  (91)

	ID  shift 113
	.  error


state 48
	constant : CTE .  (88)

	.  reduce 88


state 49
	elemento_imprimible : STR .  (166)

	.  reduce 166


state 50
	expression : '+' . term  (70)

	ID  shift 10
	CTE  shift 48
	'-'  shift 51
	'/'  shift 52
	'*'  shift 53
	.  error

	function_start  goto 18
	variable  goto 55
	constant  goto 56
	invocacion_funcion  goto 57
	operador_multiplicacion  goto 58
	term  goto 114
	factor  goto 61


state 51
	constant : '-' . CTE  (89)

	CTE  shift 115
	.  error


state 52
	operador_multiplicacion : '/' .  (80)

	.  reduce 80


state 53
	operador_multiplicacion : '*' .  (81)

	.  reduce 81


state 54
	imprimible : '(' . elemento_imprimible ')'  (162)
	imprimible : '(' . ')'  (163)

	ID  shift 10
	CTE  shift 48
	STR  shift 49
	'+'  shift 50
	'-'  shift 51
	'/'  shift 52
	'*'  shift 53
	')'  shift 116
	.  error

	function_start  goto 18
	variable  goto 55
	constant  goto 56
	invocacion_funcion  goto 57
	operador_multiplicacion  goto 58
	expression  goto 59
	term  goto 60
	factor  goto 61
	elemento_imprimible  goto 117


state 55
	factor : variable .  (82)
	function_start : variable .  (155)

	error  reduce 82
	ID  reduce 82
	CTE  reduce 82
	EQ  reduce 82
	GEQ  reduce 82
	LEQ  reduce 82
	NEQ  reduce 82
	FLECHA  reduce 82
	';'  reduce 82
	','  reduce 82
	'='  reduce 82
	'+'  reduce 82
	'-'  reduce 82
	'/'  reduce 82
	'*'  reduce 82
	'('  reduce 155
	')'  reduce 82
	'>'  reduce 82
	'<'  reduce 82


state 56
	factor : constant .  (83)

	.  reduce 83


state 57
	factor : invocacion_funcion .  (84)

	.  reduce 84


state 58
	term : operador_multiplicacion . factor  (76)

	ID  shift 10
	CTE  shift 48
	'-'  shift 51
	.  error

	function_start  goto 18
	variable  goto 55
	constant  goto 56
	invocacion_funcion  goto 57
	factor  goto 118


state 59
	expression : expression . operador_suma term  (67)
	expression : expression . operador_suma error  (68)
	expression : expression . term_simple  (69)
	elemento_imprimible : expression .  (167)

	ID  shift 10
	CTE  shift 119
	'+'  shift 120
	'-'  shift 121
	error  reduce 167
	';'  reduce 167
	')'  reduce 167

	function_start  goto 18
	variable  goto 122
	invocacion_funcion  goto 123
	operador_suma  goto 124
	term_simple  goto 125
	factor_simple  goto 126


state 60
	expression : term .  (66)
	term : term . operador_multiplicacion factor  (73)
	term : term . operador_multiplicacion error  (75)

	'/'  shift 52
	'*'  shift 53
	error  reduce 66
	ID  reduce 66
	CTE  reduce 66
	FLECHA  reduce 66
	';'  reduce 66
	','  reduce 66
	'+'  reduce 66
	'-'  reduce 66
	')'  reduce 66

	operador_multiplicacion  goto 127


state 61
	term : factor .  (74)

	.  reduce 74


state 62
	impresion : PRINT imprimible . ';'  (160)
	impresion : PRINT imprimible . error  (161)

	error  shift 128
	';'  shift 129
	.  error


state 63
	imprimible : elemento_imprimible .  (164)

	.  reduce 164


state 64
	if : IF error .  (108)

	.  reduce 108


state 65
	if_start : IF $$4 . condicion  (110)

	ID  shift 10
	CTE  shift 48
	'+'  shift 50
	'-'  shift 51
	'/'  shift 52
	'*'  shift 53
	'('  shift 130
	.  error

	function_start  goto 18
	variable  goto 55
	constant  goto 56
	invocacion_funcion  goto 57
	operador_multiplicacion  goto 58
	expression  goto 131
	term  goto 132
	factor  goto 61
	condicion  goto 133
	cuerpo_condicion  goto 134


state 66
	declaration_of_variables : UINT error .  (48)

	.  reduce 48


state 67
	identifier : ID .  (52)
	inicio_funcion : UINT ID .  (130)

	error  reduce 52
	ID  reduce 52
	DASIG  reduce 52
	';'  reduce 52
	','  reduce 52
	'('  reduce 130


state 68
	declaration_of_variables : UINT identifier . DASIG constant ';'  (47)
	list_of_identifiers : identifier .  (49)

	DASIG  shift 135
	error  reduce 49
	ID  reduce 49
	';'  reduce 49
	','  reduce 49


state 69
	declaration_of_variables : UINT list_of_identifiers . ';'  (45)
	declaration_of_variables : UINT list_of_identifiers . error  (46)
	list_of_identifiers : list_of_identifiers . ',' identifier  (50)
	list_of_identifiers : list_of_identifiers . ID  (51)

	error  shift 136
	ID  shift 137
	';'  shift 138
	','  shift 139
	.  error


state 70
	sentencia_retorno : RETURN error .  (151)

	.  reduce 151


state 71
	sentencia_retorno : RETURN '(' . expression ')' ';'  (147)
	sentencia_retorno : RETURN '(' . expression ')' error  (148)
	sentencia_retorno : RETURN '(' . ')' ';'  (149)

	ID  shift 10
	CTE  shift 48
	'+'  shift 50
	'-'  shift 51
	'/'  shift 52
	'*'  shift 53
	')'  shift 140
	.  error

	function_start  goto 18
	variable  goto 55
	constant  goto 56
	invocacion_funcion  goto 57
	operador_multiplicacion  goto 58
	expression  goto 141
	term  goto 60
	factor  goto 61


state 72
	expression : expression . operador_suma term  (67)
	expression : expression . operador_suma error  (68)
	expression : expression . term_simple  (69)
	sentencia_retorno : RETURN expression . ';'  (150)

	ID  shift 10
	CTE  shift 119
	';'  shift 142
	'+'  shift 120
	'-'  shift 121
	.  error

	function_start  goto 18
	variable  goto 122
	invocacion_funcion  goto 123
	operador_suma  goto 124
	term_simple  goto 125
	factor_simple  goto 126


state 73
	program_body : '{' error . '}'  (16)
	statement_list : error . ';'  (23)

	'}'  shift 143
	';'  shift 46
	.  error


state 74
	open_brace_list : '{' '{' .  (17)

	.  reduce 17


state 75
	program_body : '{' '}' .  (14)

	.  reduce 14


state 76
	program_body : '{' statement_list . '}'  (10)
	program_body : '{' statement_list . close_brace_list  (11)
	statement_list : statement_list . statement  (22)

	ID  shift 10
	PRINT  shift 11
	IF  shift 12
	UINT  shift 13
	DO  shift 14
	RETURN  shift 15
	'}'  shift 144
	'('  shift 17
	.  error

	function_start  goto 18
	variable  goto 19
	inicio_funcion  goto 20
	invocacion_funcion  goto 21
	parametro_lambda  goto 22
	list_of_variables  goto 23
	multiple_assignment  goto 24
	left_hand_side  goto 25
	close_brace_list  goto 145
	statement  goto 94
	executable_statement  goto 30
	declarative_statement  goto 31
	declaration_of_variables  goto 32
	declaracion_funcion  goto 33
	asignacion_simple  goto 34
	inline_function_invocation  goto 35
	sentencia_control  goto 36
	sentencia_retorno  goto 37
	impresion  goto 38
	lambda  goto 39
	if  goto 40
	do_while  goto 41
	if_start  goto 42
	do_while_start  goto 43


state 77
	parametro_lambda : '(' UINT . identifier ')'  (176)

	ID  shift 146
	.  error

	identifier  goto 147


state 78
	invocacion_funcion : function_start '(' . lista_argumentos ')'  (154)

	ID  shift 10
	CTE  shift 48
	'+'  shift 50
	'-'  shift 51
	'/'  shift 52
	'*'  shift 53
	.  error

	function_start  goto 18
	variable  goto 55
	constant  goto 56
	invocacion_funcion  goto 57
	lista_argumentos  goto 148
	argumento  goto 149
	operador_multiplicacion  goto 58
	expression  goto 150
	term  goto 60
	factor  goto 61


state 79
	list_of_variables : variable error . list_of_variables  (62)

	ID  shift 10
	.  error

	variable  goto 151
	list_of_variables  goto 152


state 80
	list_of_variables : variable ',' . list_of_variables  (61)

	ID  shift 10
	.  error

	variable  goto 151
	list_of_variables  goto 153


state 81
	list_of_variables : variable '=' .  (60)

	.  reduce 60


state 82
	conjunto_parametros : '(' . lista_parametros ')'  (134)
	conjunto_parametros : '(' . ')'  (135)
	semantica_pasaje : .  (144)

	error  shift 154
	CVR  shift 155
	','  shift 156
	')'  shift 157
	ID  reduce 144
	UINT  reduce 144

	semantica_pasaje  goto 158
	lista_parametros  goto 159
	parametro_formal  goto 160
	parametro_vacio  goto 161


state 83
	declaracion_funcion : inicio_funcion conjunto_parametros . '{' function_body '}'  (128)
	declaracion_funcion : inicio_funcion conjunto_parametros . '{' '}'  (129)

	'{'  shift 162
	.  error


state 84
	inline_function_invocation : invocacion_funcion error .  (153)

	.  reduce 153


state 85
	inline_function_invocation : invocacion_funcion ';' .  (152)

	.  reduce 152


state 86
	bloque_ejecutable : '{' . conjunto_sentencias_ejecutables '}'  (32)
	bloque_ejecutable : '{' . '}'  (33)
	lambda : parametro_lambda '{' . conjunto_sentencias_ejecutables argumento_lambda error  (170)

	ID  shift 10
	PRINT  shift 11
	IF  shift 12
	DO  shift 14
	RETURN  shift 15
	'}'  shift 163
	'('  shift 17
	.  error

	function_start  goto 18
	variable  goto 19
	invocacion_funcion  goto 21
	parametro_lambda  goto 22
	list_of_variables  goto 23
	multiple_assignment  goto 24
	left_hand_side  goto 25
	executable_statement  goto 87
	conjunto_sentencias_ejecutables  goto 164
	asignacion_simple  goto 34
	inline_function_invocation  goto 35
	sentencia_control  goto 36
	sentencia_retorno  goto 37
	impresion  goto 38
	lambda  goto 39
	if  goto 40
	do_while  goto 41
	if_start  goto 42
	do_while_start  goto 43


state 87
	conjunto_sentencias_ejecutables : executable_statement .  (34)

	.  reduce 34


state 88
	lambda : parametro_lambda bloque_ejecutable . argumento_lambda ';'  (168)
	lambda : parametro_lambda bloque_ejecutable . argumento_lambda error  (169)
	argumento_lambda : .  (175)

	'('  shift 165
	error  reduce 175
	';'  reduce 175

	argumento_lambda  goto 166


state 89
	conjunto_sentencias_ejecutables : conjunto_sentencias_ejecutables . executable_statement  (35)
	lambda : parametro_lambda conjunto_sentencias_ejecutables . argumento_lambda error  (171)
	lambda : parametro_lambda conjunto_sentencias_ejecutables . '}' argumento_lambda error  (172)
	argumento_lambda : .  (175)

	ID  shift 10
	PRINT  shift 11
	IF  shift 12
	DO  shift 14
	RETURN  shift 15
	'}'  shift 167
	'('  shift 168
	error  reduce 175

	function_start  goto 18
	variable  goto 19
	invocacion_funcion  goto 21
	parametro_lambda  goto 22
	argumento_lambda  goto 169
	list_of_variables  goto 23
	multiple_assignment  goto 24
	left_hand_side  goto 25
	executable_statement  goto 170
	asignacion_simple  goto 34
	inline_function_invocation  goto 35
	sentencia_control  goto 36
	sentencia_retorno  goto 37
	impresion  goto 38
	lambda  goto 39
	if  goto 40
	do_while  goto 41
	if_start  goto 42
	do_while_start  goto 43


state 90
	list_of_constants : constant .  (63)

	.  reduce 63


state 91
	multiple_assignment : list_of_variables list_of_constants . ';'  (58)
	multiple_assignment : list_of_variables list_of_constants . error  (59)
	list_of_constants : list_of_constants . ',' constant  (64)
	list_of_constants : list_of_constants . constant  (65)

	error  shift 171
	CTE  shift 48
	';'  shift 172
	','  shift 173
	'-'  shift 51
	.  error

	constant  goto 174


state 92
	asignacion_simple : left_hand_side DASIG . expression ';'  (53)
	asignacion_simple : left_hand_side DASIG . expression error  (54)
	asignacion_simple : left_hand_side DASIG . error  (56)
